# InfoPalBot

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2b8b3b7b1a0a_add_category_and_indexes_to_subscription.py  9edd30d5fe61_initial_database_schema.py
app/: config.py
app/api_clients/: events.py  news.py  weather.py
app/bot/: constants.py  fsm.py  keyboards.py  main.py
app/bot/data/: cities.py
app/bot/handlers/: basic.py  info_requests.py  profile.py  subscription.py
app/database/: crud.py  infopalbot.db  models.py  session.py
app/scheduler/: main.py  main.py~  tasks.py
tests/integration/: conftest.py  test_events_flow.py  test_news_flow.py  test_subscription_flow.py  test_subscription_with_category_flow.py  test_weather_flow.py
tests/unit/: test_bot_handlers.py  test_bot_handlers_basic.py  test_bot_handlers_edge_cases.py  test_bot_handlers_info_requests.py  test_bot_handlers_profile.py  test_bot_handlers_subscription_coverage.py  test_bot_handlers_subscriptions.py  test_database.py  test_events_client.py  test_news_client.py  test_scheduler_main.py  test_scheduler_tasks.py  test_weather_client.py
tests/utils/: mock_helpers.py
