[tool.poetry]
name = "infopalbot"
version = "0.1.0"
description = "Telegram bot for providing information and subscriptions"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "~=3.9.0"
sqlmodel = "~=0.0.21"
pydantic-settings = "~=2.3.4"
httpx = "~=0.27.0"
apscheduler = "~=3.10.4"
python-dotenv = "~=1.0.1"
alembic = "~=1.16.2"

[tool.poetry.group.dev.dependencies]
pytest = "~=8.3.2"
pytest-cov = "~=5.0.0"
pytest-asyncio = "~=0.23.7"
ruff = "~=0.5.5"
black = "~=24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests/unit",
    "tests/integration",
]